<resources>
    <string name="app_name">Bloquery</string>
    <string name="action_settings">Settings</string>

    <string name="action_logout">Log Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="logout_button">Log Out</string>
    <string name="welcome">Welcome!</string>

    <string name="action_profile">Profile</string>
    <string name="action_refresh_data">Refresh</string>

    <string name="single_question_submit_answer">Submit Answer</string>
    <string name="single_question_exit">Back to Questions</string>

    <string name="action_add_question">Add a Question</string>
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">OK</string>
    <string name="clear_button">Clear</string>

    <string name="profile_viewer_title">Profile Viewer</string>
    <string name="profile_viewer_exit">Exit Viewer</string>

    <string name="profile_editor_title">Profile Editor</string>
    <string name="profile_gallery_button">Load Image</string>
    <string name="profile_camera_button">Use Camera</string>
    <string name="profile_editor_save">Save Profile</string>
    <string name="profile_editor_exit">Exit Editor</string>


    <!-- localized strings -->
    <string name="what_time_is_sunset">What time is sunset?</string>
</resources>
