<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.BloqueryActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:onClick="onMenuLogoutClick" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never"
        android:onClick="onMenuProfileClick" />

    <item
        android:id="@+id/action_refresh_data"
        android:orderInCategory="100"
        android:title="@string/action_refresh_data"
        app:showAsAction="never"
        android:onClick="onMenuRefreshDataClick" />

    <item
        android:id="@+id/action_add_question"
        android:orderInCategory="100"
        android:title="@string/action_add_question"
        app:showAsAction="ifRoom"
        android:onClick="onMenuAddQuestionClick" />
</menu>
